# QuickDev

./: .gitignore  .quickdev.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: implementation-checklist.md  phase12-qa-matrix.md  product-plan.md  technical-architecture.md
packaging/npm/: .npmignore  README.md  install.js  package.json
packaging/scripts/: publish-crate.sh  publish-npm.sh
src/: adapters.rs  apps.rs  capture.rs  cli.rs  config.rs  doctor.rs  fzf.rs  ghostty_applescript.rs  gnome_terminal.rs  kitty.rs  launch.rs  lib.rs  main.rs  main.tsx  models.rs  parse.rs  router.tsx  tab_strategy.rs  terminal_app.rs  validate.rs
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20260523000000_remove_sessions.sql
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src/commands/: add.rs  capture.rs  config.rs  deregister.rs  doctor.rs  edit.rs  init.rs  launch.rs  list.rs  mod.rs  prune.rs  remove.rs  shared.rs  validate.rs
src/components/: date-range-picker.tsx  layout.tsx  project-card.tsx  project-dialog.tsx  project-performance-chart.tsx  projects-table.tsx  sidebar.tsx  sortable-task-card.tsx  task-card.tsx  task-column.tsx  task-dialog.tsx  theme-provider.tsx  (+2 more)
styles/: globals.css
tests/: adapters_test.rs  apps_test.rs  capture_test.rs  config_test.rs  doctor_test.rs  fzf_test.rs  gnome_terminal_test.rs  kitty_test.rs  launch_test.rs  list_test.rs  liveness_test.rs  models_test.rs  parse_test.rs  validate_test.rs
(+43 files in other folders)
