[package]
name = "quickdev"
version = "0.1.0"
edition = "2021"
description = "Cross-platform CLI for managing project terminal and app launch configurations"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
shell-words = "1"

[dev-dependencies]
tempfile = "3"
