[package]
name = "quickdev"
version = "0.2.0"
edition = "2021"
description = "Cross-platform CLI for managing project terminal and app launch configurations"
license = "MIT"
repository = "https://github.com/Abrar118/QuickDev"
readme = "README.md"
keywords = ["cli", "terminal", "launcher", "developer-tools", "productivity"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"
# Release/packaging tooling — not part of the published source crate.
exclude = ["packaging/", ".github/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
shell-words = "1"

[target.'cfg(windows)'.dependencies]
lnk = "0.5"

[dev-dependencies]
tempfile = "3"
